# bot

./: .gitignore  Cargo.toml
my_test_db/: db  snap.00000000000000D4
src/: commands.rs  database.rs  help.rs  main.rs  utils.rs
src/command/: admin.rs  datapack.rs  megumin.rs  mod.rs  review.rs  verify.rs
src/data/: error.rs  mod.rs
src/trading/: mod.rs
