[package]
name = "mcdatapacks-bot"
version = "0.1.0"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.8.3", features = ["cache"] }
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"