[package]
name = "mcdatapacks-bot"
version = "0.2.0"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.8.6", features = ["cache"] }
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
random_color = "0.4.4"
anyhow = "1.0.30"
structopt = "0.3.14"
thiserror = "1.0.17"
serde_json = "1.0.53"
serde = { version = "1.0.110", features = ["derive"] }