[package]
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"
name    = "mcdatapacks-bot"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = "1"
dotenv       = "0.15"
env_logger   = "0.7"
log          = "0.4"
random_color = "0.4"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serenity     = { version = "0.8", features = ["cache"] }
structopt    = "0.3"
thiserror    = "1"
